Fix action run button distance from scrollbar

--- a/src/app/pages/actions/action-create-edit/action-create-edit.component.css
+++ b/src/app/pages/actions/action-create-edit/action-create-edit.component.css
@@ -1,6 +1,6 @@
 .run-button {
     position: absolute;
     top: 45px;
-    right: 15px;
+    right: 25px;
     z-index: 9;
   }
